@@ -21,6 +21,8 @@ Trunk - Unreleased
     YARN-488. TestContainerManagerSecurity fails on Windows. (Chris Nauroth
     via hitesh)
 
+    YARN-490. TestDistributedShell fails on Windows. (Chris Nauroth via hitesh)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS
 
     YARN-158. Yarn creating package-info.java must not depend on sh.
